packages/svelte/tests/validator/samples/event-attribute/input.svelte
<button onclick={() => {}}>ok</button>
<Button onclick onbar="bar">ok</Button>

<button onclick="foo">not ok</button>
