packages/svelte/tests/compiler-errors/samples/invalid-snippet-mutation/main.svelte
{#snippet foo(value)}
	<button onclick={() => value += 1}>click</button>
{/snippet}
